chore: fix some sonatype issues